# coupa

./: .env.example  .gitignore  FINAL_RESULTS.md  IMPLEMENTATION_COMPLETE.md  PHASE_3_4_SUMMARY.md  README.md  classification_results_20260502_091006.xlsx  classification_results_20260502_102001.xlsx  classification_results_20260502_102121.xlsx  classification_results_20260502_102240.xlsx  classification_results_20260502_104701.xlsx  classification_results_20260502_105029.xlsx  classification_results_optionB_20260502_104615.xlsx  classification_results_phase3_20260502_103551.xlsx  financial_analysis_20260502_115954.xlsx  financial_analysis_20260502_142518.xlsx  historical_patterns.csv  pyproject.toml  validation_results.json
.playwright-mcp/: page-2026-04-29T21-47-36-079Z.yml  page-2026-04-29T21-47-40-336Z.yml  page-2026-04-29T21-47-57-428Z.yml
classification/: database.py  engine.py
classification/batch/: processor.py
classification/matchers/: commodity_matcher.py  keyword_matcher.py  llm_matcher.py  pattern_matcher.py
docs/classification-system/: CRITICAL_REVIEW.md  DOCUMENTATION_SUMMARY.md  GITHUB_PAGES_SETUP.md  README.md  ai-llm-integration.html  business-case.html  demo.html  deployment-options.html  final-results.html  implementation-plan.html  index.html  system-design.html  technical-spec.html  user-guide.html  validation-results.html  webapp-architecture.html
scripts/: export_financial_analysis.py  load_activity_codes.py  phase0_validation.py  validation_results.json
tests/: conftest.py  test_database.py  test_engine.py  test_loader.py
(+8 files in other folders)
